Implement password prompt for page access
Added a password prompt that checks for the year 2026.

--- a/sevgilim.html
+++ b/sevgilim.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <script>
+      var password = prompt("Geçmişi unutturan, geleceğimizi müjdeleyen o yılı yazar mısın? ❤️");
+      if (password != "2026") {
+        alert("Hatalı şifre! Tekrar denemek için sayfayı yenile.");
+        window.location.href = "about:blank"; 
+      }
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sana Bir Mesajım Var</title>
