--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/mustafa-burak-dinleyici-329416374/" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/mbrksec" target="_blank"><i class="bx bxl-github"></i></a>
+          <a href="https://medium.com/@mustafabrkdinleyici" target="_blank"><i class="bx bxl-medium"></i></a>
         </div>
       </div>
 
@@ -197,3 +198,4 @@
 
 </body>
 </html>
+
